Convert 'About' pages to Hugo
This changes the pages so that they render correctly using Hugo.

Note that this commit makes it look as if the
`app/views/about/index.html.erb` file was simply deleted. However, its
content was adapted and merged into `layouts/_default/baseof.html`.
Since Git's diff machinery operates only on single files or at most a
pair of file names in case of a rename, there is not really any good way
to present this movement of one file's content into an already-existing
other file.

Signed-off-by: Victoria Dye <vdye@github.com>
Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -38,7 +38,7 @@
   <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>{{ .Page.Title | default "Git" }}</title>
+  <title>{{ .Page.Title | default "Git" }}{{ if (isset .Params "subtitle") }} - {{ .Params.subtitle }}{{ end }}</title>
 
   <link href='/favicon.ico' rel='shortcut icon' type='image/x-icon'>
 
@@ -73,6 +73,20 @@
         <div id="content">
           {{ if (eq .Page.Path "/docs") }}
             {{ partial "ref/index.html" . }}
+          {{ else if eq $section "about" }}
+            <div id="main">
+              <h1 data-pagefind-meta="title">About{{ if (isset .Params "subtitle") }} - {{ .Params.subtitle }}{{ end }}</h1>
+
+              <ol id="about-nav">
+                {{ $abouts := sort (where .Site.RegularPages "Params.section" "about") "Params.order"  }}
+                {{ range $about := $abouts }}
+                <li>
+                  <a href="{{ relURL (strings.TrimSuffix ".html" $about.RelPermalink) }}" class="{{ $about.Params.display_class }}{{ if eq $.Params.subsection $about.Params.subsection }} current{{ end }}">{{ $about.Params.subtitle }}</a>
+                </li>
+                {{ end }}
+              </ol>
+              {{ .Content }}
+            </div>
           {{ else }}
             {{ .Content }}
           {{ end }}
