--- a/app/views/downloads/guis/index.html.haml
+++ b/app/views/downloads/guis/index.html.haml
@@ -124,6 +124,11 @@
           %p.description
             <strong>Platforms:</strong> Windows, Mac, Linux</br>
             <strong>Price:</strong> $29/user (Free 15 day trial)
+          =link_to(image_tag('guis/tortoisegit@2x.png', {:width => '294', :height => '166'}), "https://tortoisegit.org/")
+          %h4= link_to "TortoiseGit", "https://tortoisegit.org/"
+          %p.description
+            <strong>Platforms:</strong> Windows</br>
+            <strong>Price:</strong> Free
 
   %div.callout
     %p
