Allow filtering by any platform, not just current OS
Fixes https://github.com/git/git-scm.com/issues/777

--- a/app/assets/stylesheets/typography.scss
+++ b/app/assets/stylesheets/typography.scss
@@ -307,6 +307,14 @@ a.subtle-button {
   }
 }
 
+a.subtle-button.selected {
+  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #d7d7c1), color-stop(100%, #cbc9b4));
+  background-image: -webkit-linear-gradient(#d7d7c1, #cbc9b4);
+  background-image: -moz-linear-gradient(#d7d7c1, #cbc9b4);
+  background-image: -o-linear-gradient(#d7d7c1, #cbc9b4);
+  background-image: linear-gradient(#d7d7c1, #cbc9b4);
+}
+
 a#gui-os-filter {
   display: none;
   margin-top: 15px;
