guis: add missing <li> tags
A few of the more recent entries were missing their `<li>`
tags. In addition to making the column alignment slightly
funny, this meant that they did not work with the "filter
only for my OS" button, which selects entries based on the
`<li>` classes.

--- a/app/views/downloads/guis/index.html.haml
+++ b/app/views/downloads/guis/index.html.haml
@@ -119,11 +119,13 @@
           %p.description
             <strong>Platforms:</strong> Windows</br>
             <strong>Price:</strong> $69.99/user / Free for non-commercial use
+        %li.mac.windows.linux
           =link_to(image_tag('guis/gitahead@2x.png', {:width => '294', :height => '166'}), "https://www.gitahead.com/")
           %h4= link_to "GitAhead", "https://www.gitahead.com/"
           %p.description
             <strong>Platforms:</strong> Windows, Mac, Linux</br>
             <strong>Price:</strong> $29/user (Free 15 day trial)
+        %li.windows
           =link_to(image_tag('guis/tortoisegit@2x.png', {:width => '294', :height => '166'}), "https://tortoisegit.org/")
           %h4= link_to "TortoiseGit", "https://tortoisegit.org/"
           %p.description
