Auto-reflow GUI list into two columns

--- a/app/assets/stylesheets/lists.scss
+++ b/app/assets/stylesheets/lists.scss
@@ -14,6 +14,11 @@ ul.video-thumbnails,
 ul.gui-thumbnails {
   @extend .content-list;
   margin-top: 1em;
+
+  columns: 2;
+  -webkit-columns: 2;
+  -moz-columns: 2;
+
   li {
     margin-bottom: 2em;
     img {
@@ -26,6 +31,16 @@ ul.gui-thumbnails {
 }
 
 ul.gui-thumbnails {
+  li {
+    break-inside: avoid-column;
+    -webkit-column-break-inside: avoid;
+    -moz-column-break-inside: avoid;
+    -o-column-break-inside: avoid;
+    column-break-inside: avoid;
+    page-break-inside: avoid;
+    display: inline-block;
+    width: 100%;
+  }
   li.masked {
     display: none;
   }
