--- a/app/views/doc/_translations.html.erb
+++ b/app/views/doc/_translations.html.erb
@@ -1,4 +1,8 @@
 <p>
+This book is available in
+  <a href="/book/en">English</a>.
+</p>
+<p>
 This book is translated into
   <a href="/book/de">Deutsch</a>,
   <a href="/book/zh">简体中文</a>,
