--- a/app/views/books/_translations.html.erb
+++ b/app/views/books/_translations.html.erb
@@ -3,7 +3,7 @@ This book is available in
   <a href="/book/en">English</a>.
 </p>
 <p>
-This book is translated into
+Full translation available in
   <a href="/book/de">Deutsch</a>,
   <a href="/book/zh">简体中文</a>,
   <a href="/book/zh-tw">正體中文</a>,
