Change the cover of the Progit book to the second edition
This closes #964

--- a/app/assets/stylesheets/book.scss
+++ b/app/assets/stylesheets/book.scss
@@ -82,7 +82,7 @@
   width: 298px;
   height: 398px;
   color: black;
-  @include background-image-2x('/images/pro-git-298x398', 298px, 398px, 0 0, no-repeat, jpg);
+  @include background-image-2x('/images/progit2', 298px, 398px, 0 0, no-repeat, jpg);
   background-color: #000102;
   text-indent: -9999px;
   cursor: pointer;
