Rework book presentation in the doc section
The book is tersely presented and a link a given to the /book section.

--- a/app/views/doc/index.html.erb
+++ b/app/views/doc/index.html.erb
@@ -2,7 +2,6 @@
 <% @page_title = "Git - Documentation" %>
 
 <% content_for :sidebar do %>
-  <%= render 'shared/book' %>
 <% end %>
 
 <div id="main">
@@ -31,72 +30,13 @@
 
   <h2> Book </h2>
 
-  <div id="book-container">
-
-    <div id="book-intro">
-
-      <p>
-        Pro Git is written by Scott Chacon and Ben Straub and published by Apress.
-      </p>
-
-      <p>
-        Print copies can be purchased from
-        <a href="http://www.amazon.com/gp/product/1430218339?ie=UTF8&camp=1789&creative=9325&creativeASIN=1430218339&linkCode=as2&tag=git-sfconservancy-20">Amazon</a>
-        and
-        <a href="https://github.s3.amazonaws.com/media/progit.en.pdf">PDF</a>,
-        <a href="https://github.s3.amazonaws.com/media/pro-git.en.mobi" type="application/x-mobipocket-ebook">mobi</a>,
-        and
-        <a href="https://github.s3.amazonaws.com/media/progit.epub" type="application/epub+zip">ePub</a> versions are available for free.
-      </p>
-
-      <p>
-        <a href="#" id="open-book">Back to book →</a>
-      </p>
-
-    </div>
-
-    <div id="flippy-book">
-
-      <div id="book-inside-page">
-        <span class="header">
-          Scott Chacon
-        </span>
-        <ol class="book-toc">
-          <% @book.chapters.where("number >= 6").where(:chapter_type => 'chapter').each do |chapter| %>
-          <% next if chapter.sections.size == 0 %>
-            <li class="chapter">
-              <h2>
-                <%= chapter.number.to_s + '.' %>
-                <a href="/book/<%= @book.code %>/v<%= @book.edition %>/<%= chapter.sections.first.slug %>"><%= chapter.title %></a>
-              </h2>
-            </li>
-          <% end %>
-        </ol>
-      </div>
-
-      <div id="book-cover" class="open">
-        <div id="book-cover-outside" class="face">
-          Pro Git
-        </div>
-        <div id="book-cover-inside" class="face">
-          <span class="header"> Pro Git </span>
-          <ol class="book-toc">
-            <% @book.chapters.where("number <= 5").where(:chapter_type => 'chapter').each do |chapter| %>
-            <% next if chapter.sections.size == 0 %>
-              <li class="chapter">
-                <h2>
-                  <%= chapter.number.to_s + '.' %>
-                  <a href="/book/<%= @book.code %>/v<%= @book.edition %>/<%= chapter.sections.first.slug %>"><%= chapter.title %></a>
-                </h2>
-              </li>
-            <% end %>
-          </ol>
-          <a href="#" id="about-book">Book information and downloads</a>
-        </div>
-      </div>
-
-    </div>
-
+  <div class="callout ref-manual">
+    <h3>Pro Git</h3>
+    <p>The entire <strong><a href="/book">Pro Git book</a></strong> written
+      by Scott Chacon and Ben Straub is available to <a href="/book">read online for free</a>.
+      Dead tree versions are available on <a href="http://www.amazon.com/Pro-Git-Scott-Chacon/dp/1484200772?ie=UTF8&camp=1789&creative=9325&creativeASIN=1430218339&linkCode=as2&tag=git-sfconservancy-20">Amazon.com</a>.
+    </p>
+  </div>
     <h2> Videos </h2>
 
     <% groups = @videos[0,4].group_by { |i| i[0] % 2 } %>
