--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -47,7 +47,7 @@
   The entire Pro Git book, written by Scott Chacon and Ben Straub and published by Apress, is available here. All content is licensed under the <a href="https://creativecommons.org/licenses/by-nc-sa/3.0/">Creative Commons Attribution Non Commercial Share Alike 3.0 license</a>. Print versions of the book are available on <a href="http://www.amazon.com/Pro-Git-Scott-Chacon/dp/1484200772?ie=UTF8&camp=1789&creative=9325&creativeASIN=1430218339&linkCode=as2&tag=git-sfconservancy-20">Amazon.com</a>.</>
   </p>
   <ol class='book-toc'>
-    <% @book.chapters.each do |chapter| %>
+    <% @book.chapters.includes(:sections).each do |chapter| %>
     <% next if chapter.sections.size == 0 %>
     <li class='chapter'>
     <h2><%= chapter.cs_number %>. <a href="/book/<%= @book.code %>/v<%= @book.edition %>/<%=u chapter.sections.first.slug %>"><%= chapter.title %></a></h2>
