/community: add a note about the #git-devel IRC channel
It's relatively low-volume, but I at least hang out there with a few
others, so definitely something to advertise.

--- a/app/views/community/index.html.erb
+++ b/app/views/community/index.html.erb
@@ -60,6 +60,7 @@
 
   <p>
     If the manpages and this book aren’t enough and you need in-person help, you can try the <span class="highlight fixed">#git</span> channel on the Freenode IRC server (<strong>irc.freenode.net</strong>). These channels are regularly filled with hundreds of people who are all very knowledgeable about Git and are often willing to help.
+    The <span class="highlight fixed">#git-devel</span> channel welcomes Git development discussion, and might be able to help you contribute to Git.
   </p>
 
   <p>
