/community: advertise the new git-packagers mailing list
See
https://groups.google.com/forum/?fromgroups#!topic/git-packagers/SMikB1z6b8U
for the announcement.

--- a/app/views/community/index.html.erb
+++ b/app/views/community/index.html.erb
@@ -29,6 +29,7 @@
 
   <p>
     There is also <a href="https://groups.google.com/forum/?fromgroups#!forum/git-users">Git user mailing list</a> on Google Groups which is a nice place for beginners to ask about anything.
+    If you're a downstream packager of Git, consider joining the <a href="https://groups.google.com/forum/?fromgroups#!forum/git-packagers">Git packagers mailing list</a> for low-volume announcements from the developers, as well as other discussion related to packaging &amp; porting Git.
   </p>
 
   <h2> Bug Reporting </h2>
