link to Ry's Git tutorial's archive
since the original went offline (thanks @pedrorijo91)

--- a/app/views/doc/ext.html.erb
+++ b/app/views/doc/ext.html.erb
@@ -46,7 +46,7 @@
       <ul class='content-list'>
         <li>
           <h4><a
-		  href="https://rypress.com/tutorials/git/index.html">Ry&rsquo;s Git
+		  href="https://web.archive.org/web/20161121145226/http://rypress.com:80/tutorials/git/index">Ry&rsquo;s Git
 		  Tutorial</a></h4>
           <p class='description'>
 			A hands-on introduction to the entire Git porcelain.
