Perl website redirects to https

--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -66,7 +66,7 @@
     <li><%= link_to "Twitter", "https://github.com/twitter", class: 'twitter' %></li>
     <li><%= link_to "LinkedIn", "https://github.com/linkedin", class: 'linked-in' %></li>
     <li><%= link_to "Netflix", "https://github.com/netflix", class: 'netflix' %></li>
-    <li><%= link_to "Perl", "http://perl5.git.perl.org/perl.git", class: 'perl' %></li>
+    <li><%= link_to "Perl", "https://perl5.git.perl.org/perl.git", class: 'perl' %></li>
     <li><%= link_to "PostgreSQL", "https://git.postgresql.org/gitweb/", class: 'postgresql' %></li>
 
     <li><%= link_to "Android", "https://android-review.googlesource.com/#/q/status:open,n,z", class: 'android' %></li>
