Correct spelling: use 'its' when expressing ownership
Signed-off-by: bedhanger <bedhanger@gmx.de>

--- a/app/views/blog/posts/2011-07-11-reset.html
+++ b/app/views/blog/posts/2011-07-11-reset.html
@@ -376,7 +376,7 @@ branch back to an older commit (the first commit you want to keep):</p>
 <p>
 Now you can see that your reachable history, the history you would push,
 now looks like you had one commit with the one file, then a second that both
-added the new file and modified the first to it's final state.
+added the new file and modified the first to its final state.
 </p>
 
 <h2>Check it out</h2>
