--- a/app/views/downloads/guis/index.html.haml
+++ b/app/views/downloads/guis/index.html.haml
@@ -131,7 +131,12 @@
         %p.description
           <strong>Platforms:</strong> Linux</br>
           <strong>Price:</strong> Free
-
+      %li.mac.windows.linux
+        =link_to(image_tag('guis/codereview@2x.png', {:width => '294', :height => '166'}), "https://github.com/FabriceSalvaire/CodeReview/")
+        %h4= link_to "CodeReview", "https://github.com/FabriceSalvaire/CodeReview/"
+        %p.description
+          <strong>Platforms:</strong> Windows, Mac, Linux</br>
+          <strong>Price:</strong> Free
   %div.callout
     %p
       There are other great GUI tools available as well. Have a look at the list of <a href="https://git.wiki.kernel.org/index.php/InterfacesFrontendsAndTools">interfaces, frontends and tools</a> in the Git Wiki.
