Fix issue #377 - Inconsistent OS listings on Downloads page
Removed link to Solaris
Changed "Linux" to "Linux/Unix"

--- a/app/views/downloads/index.html.haml
+++ b/app/views/downloads/index.html.haml
@@ -15,8 +15,7 @@
             %td= link_to "Mac OS X", "/download/mac", {:class => 'icon mac'}
             %td= link_to "Windows", "/download/win", {:class => 'icon windows'}
           %tr
-            %td= link_to "Linux", "/download/linux", {:class => 'icon linux'}
-            %td= link_to "Solaris", "/download/linux", {:class => 'icon solaris'}
+            %td= link_to "Linux/Unix", "/download/linux", {:class => 'icon linux'}
 
       %p
         <a href="https://www.kernel.org/pub/software/scm/git/">Older releases</a> are available and the <a href="https://github.com/git/git">Git source repository</a> is on GitHub.
