Add PPA instructions for Ubuntu
Since Debian and Ubuntu "stable" or LTS releases are typically far behind the Git team supported releases.

--- a/app/views/downloads/download_linux.html.erb
+++ b/app/views/downloads/download_linux.html.erb
@@ -7,7 +7,10 @@
 
   <h3>Debian/Ubuntu</h3>
   <code># apt-get install git</code>
-
+  <p>For Ubuntu to get the latest git version with all fixes/features</p>
+  <code># add-apt-repository ppa:git-core/ppa</code>
+  <code># apt update; apt install git</code>
+  
   <h3>Fedora</h3>
   <code># yum install git</code> (up to Fedora 21)<br>
   <code># dnf install git</code> (Fedora 22 and later)
