Adding a `banner` helper
This allows for consistent banner messaging across the site,
with the option to dismiss and reappear after a given duration.

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -29,15 +29,28 @@ aside {
   margin-bottom: 35px;
 }
 
-#banner {
-    background-color: #fcbda5;
-    color: #855;
-    padding: 1.0em 100px;
-    margin-bottom: 30px;
-    font-size: 100%;
-}
-#banner a {
+.banner-message {
+  background-color: #fcbda5;
+  color: #855;
+  padding: 1.0em 100px;
+  margin-bottom: 30px;
+  font-size: 100%;
+  position: relative;
+
+  a {
     color: #C22;
+  }
+
+  .dismiss {
+    position: absolute;
+    top: 0;
+    right: 0;
+    border: none;
+    background: none;
+    width: 2em;
+    line-height: 2em;
+    padding: 0;
+  }
 }
 
 #content {
