Clarify wording around stability of packages

--- a/app/views/downloads/download_linux.html.erb
+++ b/app/views/downloads/download_linux.html.erb
@@ -6,8 +6,9 @@
   <p>It is easiest to install Git on Linux using the preferred package manager of your Linux distribution. If you prefer to build from source, you can find the tarballs <a href="https://www.kernel.org/pub/software/scm/git/">on kernel.org</a>.</p>
 
   <h3>Debian/Ubuntu</h3>
+  <p>For the latest stable version for your release of Debian/Ubuntu</p>
   <code># apt-get install git</code>
-  <p>For Ubuntu to get the latest git version with all fixes/features</p>
+  <p>For Ubuntu you can add this PPA to get the latest stable git version from the developers</p>
   <code># add-apt-repository ppa:git-core/ppa</code>
   <code># apt update; apt install git</code>
   
