--- a/app/views/downloads/download_linux.html.erb
+++ b/app/views/downloads/download_linux.html.erb
@@ -8,7 +8,7 @@
   <h3>Debian/Ubuntu</h3>
   <p>For the latest stable version for your release of Debian/Ubuntu</p>
   <code># apt-get install git</code>
-  <p>For Ubuntu you can add this PPA to get the latest stable git version from the developers</p>
+  <p>For Ubuntu, this PPA provides the latest stable upstream Git version</p>
   <code># add-apt-repository ppa:git-core/ppa</code>
   <code># apt update; apt install git</code>
   
