--- a/app/views/doc/ext.html.erb
+++ b/app/views/doc/ext.html.erb
@@ -34,9 +34,10 @@
           </p>
         </li>
         <li>
-          <h4><a href="https://backlogtool.com/git-guide/en/">Git Beginner's Guide for Dummies</a></h4>
+          <h4><a href="https://backlog.com/git-tutorial/en/">Git Beginner's Guide for Dummies</a></h4>
           <p class='description'>
             This guide includes an introduction for complete beginners as well as hands-on tutorials for intermediate learners.
+            ( <a href="https://backlog.com/git-tutorial/kr/">Korean</a> / <a href="https://backlog.com/git-tutorial/cn/">Simplified Chinese</a> / <a href="https://backlog.com/git-tutorial/tw/">Traditional Chinese</a> / <a href="https://backlog.com/git-tutorial/vn/">Vietnamese</a> )
           </p>
         </li>
       </ul>
