Added instruction to install git using Nix/on NixOS

--- a/app/views/downloads/download_linux.html.erb
+++ b/app/views/downloads/download_linux.html.erb
@@ -28,6 +28,9 @@
   <h3>Mageia</h3>
   <code># urpmi git</code>
 
+  <h3>Nix/NixOS</h3>
+  <code># nix-env -i git</code>
+
   <h3>FreeBSD</h3>
   <code># pkg install git</code>
   
