Add data-trend attribute to some GUI clients
The attribute provides a different topic to search than the name
because some names are not good to use.
This will help sorting clients automatically

--- a/app/views/downloads/guis/index.html.haml
+++ b/app/views/downloads/guis/index.html.haml
@@ -74,7 +74,7 @@
           <strong>License:</strong> GNU GPL
       %li.mac.windows
         =link_to(image_tag('guis/tower@2x.png', {:width => '294', :height => '166'}), "https://www.git-tower.com/")
-        %h4= link_to "Tower", "https://www.git-tower.com/"
+        %h4{ :'data-trend' => "git tower"}= link_to "Tower", "https://www.git-tower.com/"
         %p.description
           <strong>Platforms:</strong> Windows, Mac</br>
           <strong>Price:</strong> $79/user (Free 30 day trial)</br>
@@ -123,7 +123,7 @@
           <strong>License:</strong> Proprietary
       %li.mac.windows.linux
         =link_to(image_tag('guis/cycligent@2x.png', {:width => '294', :height => '166'}), "https://www.cycligent.com/git-tool")
-        %h4= link_to "Cycligent Git Tool", "https://www.cycligent.com/git-tool"
+        %h4{ :'data-trend' => "Cycligent"}= link_to "Cycligent Git Tool", "https://www.cycligent.com/git-tool"
         %p.description
           <strong>Platforms:</strong> Windows, Mac, Linux</br>
           <strong>Price:</strong> Free</br>
