Reorder GUI clients according google trends popularity

--- a/app/views/downloads/guis/index.html.haml
+++ b/app/views/downloads/guis/index.html.haml
@@ -44,12 +44,33 @@
           <strong>Platforms:</strong> Windows</br>
           <strong>Price:</strong> Free</br>
           <strong>License:</strong> GNU GPL
+      %li.windows
+        =link_to(image_tag('guis/git-extensions@2x.png', {:width => '294', :height => '166'}), "https://gitextensions.github.io/")
+        %h4= link_to "Git Extensions", "https://gitextensions.github.io/"
+        %p.description
+          <strong>Platforms:</strong> Windows</br>
+          <strong>Price:</strong> Free</br>
+          <strong>License:</strong> GNU GPL
       %li.mac.windows.linux
         =link_to(image_tag('guis/git-kraken@2x.png', {:width => '294', :height => '166'}), "https://www.gitkraken.com/")
         %h4= link_to "GitKraken", "https://www.gitkraken.com/"
         %p.description
           <strong>Platforms:</strong> Windows, Mac, Linux</br>
           <strong>Price:</strong> Free for non-commercial use</br>
+          <strong>License:</strong> Proprietary
+      %li.mac.windows.linux
+        =link_to(image_tag('guis/smartgit@2x.png', {:width => '294', :height => '166'}), "https://www.syntevo.com/smartgit/")
+        %h4= link_to "SmartGit", "https://www.syntevo.com/smartgit/"
+        %p.description
+          <strong>Platforms:</strong> Windows, Mac, Linux</br>
+          <strong>Price:</strong> $79/user / Free for non-commercial use</br>
+          <strong>License:</strong> Proprietary
+      %li.mac.windows
+        =link_to(image_tag('guis/tower@2x.png', {:width => '294', :height => '166'}), "https://www.git-tower.com/")
+        %h4{ :'data-trend' => "git tower"}= link_to "Tower", "https://www.git-tower.com/"
+        %p.description
+          <strong>Platforms:</strong> Windows, Mac</br>
+          <strong>Price:</strong> $79/user (Free 30 day trial)</br>
           <strong>License:</strong> Proprietary
       %li.mac
         =link_to(image_tag('guis/gitup@2x.png', {:width => '294', :height => '166'}), "http://gitup.co/")
@@ -59,25 +80,11 @@
           <strong>Price:</strong> Free</br>
           <strong>License:</strong> GNU GPL
       %li.mac.windows.linux
-        =link_to(image_tag('guis/smartgit@2x.png', {:width => '294', :height => '166'}), "https://www.syntevo.com/smartgit/")
-        %h4= link_to "SmartGit", "https://www.syntevo.com/smartgit/"
+        =link_to(image_tag('guis/giteye@2x.png', {:width => '294', :height => '166'}), "http://www.giteyeapp.com/")
+        %h4= link_to "GitEye", "http://www.giteyeapp.com/"
         %p.description
           <strong>Platforms:</strong> Windows, Mac, Linux</br>
-          <strong>Price:</strong> $79/user / Free for non-commercial use</br>
-          <strong>License:</strong> Proprietary
-      %li.windows
-        =link_to(image_tag('guis/git-extensions@2x.png', {:width => '294', :height => '166'}), "https://gitextensions.github.io/")
-        %h4= link_to "Git Extensions", "https://gitextensions.github.io/"
-        %p.description
-          <strong>Platforms:</strong> Windows</br>
           <strong>Price:</strong> Free</br>
-          <strong>License:</strong> GNU GPL
-      %li.mac.windows
-        =link_to(image_tag('guis/tower@2x.png', {:width => '294', :height => '166'}), "https://www.git-tower.com/")
-        %h4{ :'data-trend' => "git tower"}= link_to "Tower", "https://www.git-tower.com/"
-        %p.description
-          <strong>Platforms:</strong> Windows, Mac</br>
-          <strong>Price:</strong> $79/user (Free 30 day trial)</br>
           <strong>License:</strong> Proprietary
       %li.windows.linux
         =link_to(image_tag('guis/gitg@2x.png', {:width => '294', :height => '166'}), "https://wiki.gnome.org/Apps/Gitg/")
@@ -86,30 +93,23 @@
           <strong>Platforms:</strong> Windows, Linux</br>
           <strong>Price:</strong> Free</br>
           <strong>License:</strong> GNU GPL
-      %li.mac
-        =link_to(image_tag('guis/gitx@2x.png', {:width => '294', :height => '166'}), "https://rowanj.github.io/gitx/")
-        %h4= link_to "GitX-dev ", "https://rowanj.github.io/gitx/"
+      %li.linux
+        =link_to(image_tag('guis/giggle@2x.png', {:width => '294', :height => '166'}), "https://wiki.gnome.org/Apps/giggle/")
+        %h4= link_to "giggle", "https://wiki.gnome.org/Apps/giggle/"
         %p.description
-          <strong>Platforms:</strong> Mac</br>
-          <strong>Price:</strong> Free</br>
-          <strong>License:</strong> GNU GPL
-      %li.windows
-        =link_to(image_tag('guis/aurees@2x.png', {:width => '294', :height => '166'}), "https://aurees.com/")
-        %h4= link_to "Aurees", "https://aurees.com/"
-        %p.description
-          <strong>Platforms:</strong> Windows</br>
-          <strong>Price:</strong> $69.99/user / Free for non-commercial use</br>
-          <strong>License:</strong> Proprietary
-      %li.mac.windows.linux
-        =link_to(image_tag('guis/git-cola@2x.png', {:width => '294', :height => '166'}), "https://git-cola.github.io/")
-        %h4= link_to "git-cola", "https://git-cola.github.io/"
-        %p.description
-          <strong>Platforms:</strong> Windows, Mac, Linux</br>
+          <strong>Platforms:</strong> Linux</br>
           <strong>Price:</strong> Free</br>
           <strong>License:</strong> GNU GPL
       %li.mac.windows.linux
         =link_to(image_tag('guis/ungit@2x.png', {:width => '294', :height => '166'}), "https://github.com/FredrikNoren/ungit")
         %h4= link_to "ungit", "https://github.com/FredrikNoren/ungit"
+        %p.description
+          <strong>Platforms:</strong> Windows, Mac, Linux</br>
+          <strong>Price:</strong> Free</br>
+          <strong>License:</strong> MIT
+      %li.mac.windows.linux
+        =link_to(image_tag('guis/git-cola@2x.png', {:width => '294', :height => '166'}), "https://git-cola.github.io/")
+        %h4= link_to "git-cola", "https://git-cola.github.io/"
         %p.description
           <strong>Platforms:</strong> Windows, Mac, Linux</br>
           <strong>Price:</strong> Free for individuals, subscription based for businesses</br>
@@ -128,19 +128,12 @@
           <strong>Platforms:</strong> Windows, Mac, Linux</br>
           <strong>Price:</strong> Free</br>
           <strong>License:</strong> Proprietary
-      %li.mac.windows.linux
-        =link_to(image_tag('guis/giteye@2x.png', {:width => '294', :height => '166'}), "http://www.giteyeapp.com/")
-        %h4= link_to "GitEye", "http://www.giteyeapp.com/"
+      %li.windows
+        =link_to(image_tag('guis/aurees@2x.png', {:width => '294', :height => '166'}), "https://aurees.com/")
+        %h4= link_to "Aurees", "https://aurees.com/"
         %p.description
-          <strong>Platforms:</strong> Windows, Mac, Linux</br>
-          <strong>Price:</strong> Free</br>
-          <strong>License:</strong> Proprietary
-      %li.mac
-        =link_to(image_tag('guis/fork@2x.png', {:width => '294', :height => '166'}), "https://git-fork.com/")
-        %h4= link_to "Fork", "https://git-fork.com/"
-        %p.description
-          <strong>Platforms:</strong> Mac</br>
-          <strong>Price:</strong> Free</br>
+          <strong>Platforms:</strong> Windows</br>
+          <strong>Price:</strong> $69.99/user / Free for non-commercial use</br>
           <strong>License:</strong> Proprietary
       %li.mac.windows.linux
         =link_to(image_tag('guis/gitahead@2x.png', {:width => '294', :height => '166'}), "https://www.gitahead.com/")
@@ -149,13 +142,20 @@
           <strong>Platforms:</strong> Windows, Mac, Linux</br>
           <strong>Price:</strong> $29/user (Free 15 day trial)</br>
           <strong>License:</strong> Proprietary
-      %li.linux
-        =link_to(image_tag('guis/giggle@2x.png', {:width => '294', :height => '166'}), "https://wiki.gnome.org/Apps/giggle/")
-        %h4= link_to "giggle", "https://wiki.gnome.org/Apps/giggle/"
+      %li.mac
+        =link_to(image_tag('guis/gitx@2x.png', {:width => '294', :height => '166'}), "https://rowanj.github.io/gitx/")
+        %h4= link_to "GitX-dev ", "https://rowanj.github.io/gitx/"
         %p.description
-          <strong>Platforms:</strong> Linux</br>
+          <strong>Platforms:</strong> Mac</br>
           <strong>Price:</strong> Free</br>
           <strong>License:</strong> GNU GPL
+      %li.mac
+        =link_to(image_tag('guis/fork@2x.png', {:width => '294', :height => '166'}), "https://git-fork.com/")
+        %h4= link_to "Fork", "https://git-fork.com/"
+        %p.description
+          <strong>Platforms:</strong> Mac</br>
+          <strong>Price:</strong> Free</br>
+          <strong>License:</strong> Proprietary
       %li.mac.windows.linux
         =link_to(image_tag('guis/codereview@2x.png', {:width => '294', :height => '166'}), "https://github.com/FabriceSalvaire/CodeReview/")
         %h4= link_to "CodeReview", "https://github.com/FabriceSalvaire/CodeReview/"
