--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -13,6 +13,7 @@
       <img  src="/images/progit2.png" width="118" height="157"/>
       <div style="light">2nd Edition (2014)</div>
       <div class="switch"><a href="/book/<%= @book.code %>/v1">Switch to 1st Edition</a></div>
+      <% if (@book.ebook_pdf || @book.ebook_epub || @book.ebook_mobi) %>
       <div class="ebook-download">
         <h2>Download Ebook</h2>
         <div class="ebooks">
@@ -29,6 +30,7 @@
           <% end %>
         </div>
       </div>
+      <% end %>
      </div>
   <% else %>
     <div style="float:right;margin: -20px 40px 0 40px;">
