--- a/app/views/downloads/guis/index.html.haml
+++ b/app/views/downloads/guis/index.html.haml
@@ -24,7 +24,7 @@
   %div.two-column
     %ul.gui-thumbnails
       - guis_info.sort_by { |g| g["order"] }.each do |gui|
-        %li{:class => gui["platform_classes"].join(' ')}
+        %li{:class => platformsToCssClass(gui["platforms"]).join(' ')}
           =link_to(image_tag("#{gui['image_tag']}", {:width => '294', :height => '166'}), "#{gui['url']}")
           %h4= link_to("#{gui['name']}", "#{gui['url']}")
           %p.description
