--- a/app/views/shared/ref/_plumbing.html.erb
+++ b/app/views/shared/ref/_plumbing.html.erb
@@ -2,6 +2,7 @@
 <ul class='unstyled'>
   <li><%= man('git-cat-file') %></li>
   <li><%= man('git-check-ignore') %></li>
+  <li><%= man('git-checkout-index') %></li>
   <li><%= man('git-commit-tree') %></li>
   <li><%= man('git-count-objects') %></li>
   <li><%= man('git-diff-index') %></li>
