--- a/app/assets/stylesheets/front-page.scss
+++ b/app/assets/stylesheets/front-page.scss
@@ -225,6 +225,7 @@ $monitor-height: 271px;
       }
       &.google {
         @include background-image-2x('/images/company-project-logos/google', 108px, 65px);
+        background-position: center;
       }
       &.twitter {
         @include background-image-2x('/images/company-project-logos/twitter', 108px, 65px);
