Add android and ios GUI sections

--- a/app/views/downloads/guis/index.html.haml
+++ b/app/views/downloads/guis/index.html.haml
@@ -16,6 +16,8 @@
     =link_to "Windows", '#', {:class => "subtle-button gui-os-filter", 'data-os' => 'windows'}
     =link_to "Mac", '#', {:class => "subtle-button gui-os-filter", 'data-os' => 'mac'}
     =link_to "Linux", '#', {:class => "subtle-button gui-os-filter", 'data-os' => 'linux'}
+    =link_to "Android", '#', {:class => "subtle-button gui-os-filter", 'data-os' => 'android'}
+    =link_to "iOS", '#', {:class => "subtle-button gui-os-filter", 'data-os' => 'ios'}
     %span#os-filter-count
       %strong 0
       %span.os Linux
