--- a/app/views/downloads/guis/index.html.haml
+++ b/app/views/downloads/guis/index.html.haml
@@ -12,6 +12,9 @@
     Git comes with built-in GUI tools for committing (<a href="/docs/git-gui">git-gui</a>) and browsing (<a href="/docs/gitk">gitk</a>), but there are several third-party tools for users looking for platform-specific experience.
 
   %p
+    <small>If you want to add another GUI tool to this list, just <a href="https://github.com/git/git-scm.com/blob/master/README.md#adding-new-gui">follow the instructions</a>.</small>
+
+  %p
     =link_to "All", '#', {:class => "subtle-button gui-os-filter selected", 'data-os' => ''}
     =link_to "Windows", '#', {:class => "subtle-button gui-os-filter", 'data-os' => 'windows'}
     =link_to "Mac", '#', {:class => "subtle-button gui-os-filter", 'data-os' => 'mac'}
