external-links: replace broken link with archived version

--- a/app/views/doc/ext.html.erb
+++ b/app/views/doc/ext.html.erb
@@ -48,7 +48,7 @@
           </p>
         </li>
         <li>
-          <h4><a href="http://hoth.entp.com/output/git_for_designers.html">Git for Designers</a></h4>
+          <h4><a href="https://web.archive.org/web/20150301060509/http://hoth.entp.com/output/git_for_designers.html">Git for Designers</a></h4>
           <p class='description'>
             No knowledge of version control? No problem.
           </p>
