--- a/app/views/doc/ext.html.erb
+++ b/app/views/doc/ext.html.erb
@@ -91,6 +91,13 @@
     <div class='column-left'>
       <ul class='books-list'>
         <li>
+         <a href="https://www.packtpub.com/application-development/git-essentials-second-edition"><img src="https://www.packtpub.com/sites/default/files/B06881.png" width="113" height="140"></a>
+         <h4><a href="https://www.packtpub.com/application-development/git-essentials-second-edition</a>Git Essentials - Second Edition</h4>
+         <p class='description'>
+           By Ferdinando Santacroce
+         </p>
+        </li>	      
+        <li>
           <a href="/book"><img src="/images/progit2.png" width="107" height="141" /></a>
           <h4><a href="/book">Pro Git</a></h4>
           <p class='description'>
@@ -160,7 +167,7 @@
           </p>
         </li>
         <li>
-          <a href="https://www.packtpub.com/application-development/git-version-control-cookbook"><img src="https://dgdsbygo8mp3h.cloudfront.net/sites/default/files/imagecache/ppv4_main_book_cover/8454OS_cov.jpg" width="107"></a>
+          <a href="https://www.packtpub.com/application-development/git-version-control-cookbook"><img src="https://www.packtpub.com/sites/default/files/9781782168454.png" width="107"></a>
           <h4><a href="https://www.packtpub.com/application-development/git-version-control-cookbook">Git Version Control Cookbook</a></h4>
           <p class='description'>
             By Aske Olsson and Rasmus Voss
