--- a/app/views/doc/ext.html.erb
+++ b/app/views/doc/ext.html.erb
@@ -34,6 +34,13 @@
             ( <a href="https://backlog.com/git-tutorial/kr/">Korean</a> / <a href="https://backlog.com/git-tutorial/cn/">Simplified Chinese</a> / <a href="https://backlog.com/git-tutorial/tw/">Traditional Chinese</a> / <a href="https://backlog.com/git-tutorial/vn/">Vietnamese</a> )
           </p>
         </li>
+        <li>
+         <a href="https://www.packtpub.com/application-development/git-essentials-second-edition"><img src="https://www.packtpub.com/sites/default/files/B06881.png" width="113"/></a>
+         <h4><a href="https://www.packtpub.com/application-development/git-essentials-second-edition">Git Essentials - Second Edition</a></h4>
+         <p class='description'>
+           By Ferdinando Santacroce
+         </p>
+        </li>	      
       </ul>
     </div>
     <div class='column-right'>
