About expansion added

--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -3,6 +3,26 @@
     <ul>
       <li>
         <%= link_to "About", "/about", sidebar_link_options("about") %>
+        <ul class="<%= @section == "trademark" ? "expanded" : ""%>">
+          <li>
+            <%= link_to "Branching and Merging", "/about", sidebar_link_options("branching-and-merging") %>
+          </li>
+          <li>
+            <%= link_to "Small and Fast", "/about/small-and-fast", sidebar_link_options("small-and-fast") %>
+          </li>
+          <li>
+            <%= link_to "Distributed", "/about/distributed", sidebar_link_options("distributed") %>
+          </li>
+          <li>
+            <%= link_to "Data Assurance", "/doc/info-assurance", sidebar_link_options("info-assurance") %>
+          </li>
+          <li>
+            <%= link_to "Staging Area", "/doc/staging-area", sidebar_link_options("staging-area") %>
+          </li>
+          <li>
+            <%= link_to "Free and Open Source", "/doc/free-and-open-source", sidebar_link_options("free-and-open-source") %>
+          </li>
+        </ul>
       </li>
       <li>
         <%= link_to "Documentation", "/doc", sidebar_link_options("documentation") %>
