Added trademark in About nav bar

--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -3,7 +3,7 @@
     <ul>
       <li>
         <%= link_to "About", "/about", sidebar_link_options("about") %>
-        <ul class="<%= @section == "trademark" ? "expanded" : ""%>">
+        <ul class="<%= @section == "about" ? "expanded" : ""%>">
           <li>
             <%= link_to "Branching and Merging", "/about", sidebar_link_options("branching-and-merging") %>
           </li>
@@ -14,13 +14,16 @@
             <%= link_to "Distributed", "/about/distributed", sidebar_link_options("distributed") %>
           </li>
           <li>
-            <%= link_to "Data Assurance", "/doc/info-assurance", sidebar_link_options("info-assurance") %>
+            <%= link_to "Data Assurance", "/about/info-assurance", sidebar_link_options("info-assurance") %>
           </li>
           <li>
-            <%= link_to "Staging Area", "/doc/staging-area", sidebar_link_options("staging-area") %>
+            <%= link_to "Staging Area", "/about/staging-area", sidebar_link_options("staging-area") %>
           </li>
           <li>
-            <%= link_to "Free and Open Source", "/doc/free-and-open-source", sidebar_link_options("free-and-open-source") %>
+            <%= link_to "Free and Open Source", "/about/free-and-open-source", sidebar_link_options("free-and-open-source") %>
+          </li>
+          <li>
+            <%= link_to "Trademark", "/trademark", sidebar_link_options("trademark") %>
           </li>
         </ul>
       </li>
@@ -58,6 +61,9 @@
       <li>
         <%= link_to "Community", "/community", sidebar_link_options("community") %>
       </li>
+      <!-- <li>
+        <%= link_to "Trademark", "/trademark", sidebar_link_options("trademark") %>
+      </li> -->
     </ul>
     <% if content_for(:sidebar) %>
       <hr class="sidebar">
