Trademark in About section added

--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -25,6 +25,9 @@
           <li>
             <%= link_to "Trademark", "/trademark", sidebar_link_options("trademark") %>
           </li>
+          <li>
+            <%= link_to "Trademark", "/trademark", sidebar_link_options("trademark") %>
+          </li>
         </ul>
       </li>
       <li>
