Trademark both links working now, Duplicacy removed

--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -32,7 +32,7 @@
   <%= render partial: "data_assurance" %>
   <%= render partial: "staging_area" %>
   <%= render partial: "free_and_open_source" %>
-  <% render partial: "trademark" %>
+  <%= render partial: "trademark" %>
 
 </div>
 
