--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -23,7 +23,7 @@
             <%= link_to "Free and Open Source", "/about/free-and-open-source", sidebar_link_options("free-and-open-source") %>
           </li>
           <li>
-            <%= link_to "Trademark", "/trademark", sidebar_link_options("trademark") %>
+            <%= link_to "Trademark", "/about/trademark", sidebar_link_options("trademark") %>
           </li>
         </ul>
       </li>
