--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,13 @@
 
 <body id="<%= @section %>">
 
+  <%= banner 'sfc-support-2017', dismissible: true do %>
+    Git is a member project of Software Freedom Conservancy, which
+    handles legal and financial needs for the project. Conservancy is
+    currently raising funds to continue their mission. Consider
+    <a href="https://sfconservancy.org/supporter/">becoming a supporter</a>!
+  <% end %>
+
   <div class="inner">
     <%= render partial: "shared/header" %>
   </div> <!-- .inner -->
