Changes to the stylesheets done

--- a/app/assets/stylesheets/lists.scss
+++ b/app/assets/stylesheets/lists.scss
@@ -66,37 +66,40 @@ ol#about-nav {
   li {
     display: inline;
     float: left;
-    margin-right: 5px;
+    margin-right: 7px;
     &:last-child {
       margin-right: 0;
     }
+    width: 80px;
+    height: 85px;
+    padding-right: 5px;
     a {
-      width: 70px;
-      height: 100px;
+      width: 60px;
+      height: 80px;
       display: block;
       opacity: 0.9;
       text-align: center;
       padding: 0 15px;
-      font-size: 14px;
+      font-size: 13px;
       line-height: 20px;
       color: $font-color;
-      @include background-image-2x('/images/icons/nav-circles', 100px, 200px);
+      @include background-image-2x('/images/icons/nav-circles', 90px, 180px);
       &.current {
-        @include background-image-2x('/images/icons/nav-circles', 100px, 200px, 0 -100px);
+        @include background-image-2x('/images/icons/nav-circles', 90px, 180px, 0 -90px);
         color: #fff;
         opacity: 1;
       }
       &.one-line {
-        padding-top: 42px;
-        height: 58px;
+        padding-top: 35px;
+        height: 55px;
       }
       &.two-line {
-        padding-top: 34px;
-        height: 66px;
+        padding-top: 28px;
+        height: 62px;
       }
       &.three-line {
-        padding-top: 25px;
-        height: 75px;
+        padding-top: 17px;
+        height: 73px;
       }
       &:hover {
         opacity: 1;
