Convert downloads/download_windws

--- a/app/views/downloads/download_windows.html.erb
+++ b/app/views/downloads/download_windows.html.erb
@@ -11,16 +11,31 @@
   <div class="callout downloading">
     <h3>Your download is starting...</h3>
     <p>
-      <%= raw "You are downloading version <strong>#{@download.version.name}</strong> of Git for the <strong>#{@platform.capitalize}</strong> platform. This is the most recent <a href='#{@project_url}'>maintained build</a> for this platform. It was released <strong>#{time_ago_in_words @download.release_date} ago</strong>, on #{@download.release_date.strftime("%Y-%m-%d")}." %>
+      <%= raw "You are downloading the latest (<strong>#{@download.version.name}</strong>) <strong>#{@bitness}</strong> version of <strong>Git for Windows</strong>. This is the most recent <a href='#{@project_url}'>maintained build</a>. It was released <strong>#{time_ago_in_words @download.release_date} ago</strong>, on #{@download.release_date.strftime("%Y-%m-%d")}." %>
     </p>
     <p>
       <%= raw "<strong>If your download hasn't started, <a href=\"#{@download.url}\">click here to download manually</a>.</strong>" %>
     </p>
+    <h3>Other Git for Windows downloads</h3>
+    <h4>Git for Windows Setup</h4>
+    <p>
+      <%= raw "<strong><a href=\"#{@download32.url}\">32-bit Git for Windows Setup</a>.</strong>" %>
+    </p>
+    <p>
+      <%= raw "<strong><a href=\"#{@download64.url}\">64-bit Git for Windows Setup</a>.</strong>" %>
+    </p>
+    <h4>Git for Windows Portable ("thumbdrive edition")</h4>
+    <p>
+      <%= raw "<strong><a href=\"#{@download32portable.url}\">32-bit Git for Windows Portable</a>.</strong>" %>
+    </p>
+    <p>
+      <%= raw "<strong><a href=\"#{@download64portable.url}\">64-bit Git for Windows Portable</a>.</strong>" %>
+    </p>
     <p class="small">
       <%= raw "The current source code release is version <strong>#{@latest.name}</strong>. If you want the newer version, you can build it from <a href=\"#{@source_url}\">the source code</a>." %>
     </p>
+    <iframe frameborder="0" height="1" src="<%= @download.url %>" width="1"></iframe>
   </div>
-  <iframe frameborder="0" height="1" src="<%= @download.url %>" width="1"></iframe>
   <h2>Now What?</h2>
   <p>
     Now that you have downloaded Git, it's time to start using it.
