More basic lint fixes

--- a/app/assets/stylesheets/git-scm.scss
+++ b/app/assets/stylesheets/git-scm.scss
@@ -17,18 +17,18 @@
 
 code {
   display: inline;
-  padding: 0px 5px;
+  padding: 0 5px;
 }
 
 pre {
   display: block;
   padding: 10px 15px 13px;
   margin-bottom: 1em;
+  overflow: auto;
+  font-family: $fixed-width-font-family;
+  line-height: 18px;
   color: #f14e32;
   background-color: #fff;
-  font-family: Courier, monospace;
-  line-height: 18px;
-  overflow: auto
   border: solid 1px #efeee6;
   border-radius: 3px;
 }
