--- a/app/assets/stylesheets/lists.scss
+++ b/app/assets/stylesheets/lists.scss
@@ -1,9 +1,11 @@
 .content-list {
   @extend .unstyled;
   margin-left: 0;
+
   li {
     margin-bottom: 1em;
   }
+
   .description {
     font-size: 12px;
     line-height: $base-line-height * 0.7;
@@ -17,10 +19,11 @@ ul.gui-thumbnails {
 
   li {
     margin-bottom: 2em;
+
     img {
       display: block;
-      margin-bottom: 5px;
       padding: 3px;
+      margin-bottom: 5px;
       border: solid 1px $base-border-color;
     }
   }
@@ -31,6 +34,7 @@ ul.gui-thumbnails {
     display: inline-block;
     width: 49%;
   }
+
   li.masked {
     display: none;
   }
@@ -38,23 +42,26 @@ ul.gui-thumbnails {
 
 ul.books-list {
   @extend .content-list;
+
   li {
     @include clearfix;
     padding-left: 125px;
+
     img {
-      width: 109px;
-      margin-left: -125px;
-      margin-right: -125px;
       float: left;
+      width: 109px;
+      margin-right: -125px;
+      margin-left: -125px;
       border: solid 1px #b7b7b7;
+
       &.creative-commons {
-        width: auto;
-        margin-left: 0;
-        margin-right: 0;
-        float: none;
-        border: none;
-        margin-top: 2em;
         display: block;
+        float: none;
+        width: auto;
+        margin-top: 2em;
+        margin-right: 0;
+        margin-left: 0;
+        border: 0;
       }
     }
   }
@@ -63,44 +70,52 @@ ul.books-list {
 ol#about-nav {
   @extend .unstyled;
   @include clearfix;
+
   li {
     display: inline;
     float: left;
-    margin-right: 7px;
-    &:last-child {
-      margin-right: 0;
-    }
     width: 80px;
     height: 85px;
     padding-right: 5px;
+    margin-right: 7px;
+
+    &:last-child {
+      margin-right: 0;
+    }
+
     a {
+      display: block;
       width: 60px;
       height: 80px;
-      display: block;
-      opacity: 0.9;
-      text-align: center;
       padding: 0 15px;
       font-size: 13px;
       line-height: 20px;
+      text-align: center;
       color: $font-color;
-      @include background-image-2x('/images/icons/nav-circles', 90px, 180px);
+      opacity: 0.9;
+      @include background-image-2x("/images/icons/nav-circles", 90px, 180px);
+
       &.current {
-        @include background-image-2x('/images/icons/nav-circles', 90px, 180px, 0 -90px);
+        @include background-image-2x("/images/icons/nav-circles", 90px, 180px, 0 -90px);
         color: #fff;
         opacity: 1;
       }
+
       &.one-line {
-        padding-top: 35px;
         height: 55px;
+        padding-top: 35px;
       }
+
       &.two-line {
-        padding-top: 28px;
         height: 62px;
+        padding-top: 28px;
       }
+
       &.three-line {
-        padding-top: 17px;
         height: 73px;
+        padding-top: 17px;
       }
+
       &:hover {
         opacity: 1;
       }
@@ -110,21 +125,25 @@ ol#about-nav {
 
 ul.related-material {
   @extend .unstyled;
-  font-size: 12px;
   margin-bottom: 3em;
+  font-size: 12px;
+
   li {
+    min-height: 17px;
+    padding-left: 25px;
     margin-bottom: 1em;
     line-height: 1.5;
-    padding-left: 25px;
-    min-height: 17px;
+
     &.reference {
-      @include background-image-2x('/images/icons/document-sm', 12px, 17px, 3px 0);
+      @include background-image-2x("/images/icons/document-sm", 12px, 17px, 3px 0);
     }
+
     &.book {
-      @include background-image-2x('/images/icons/book-sm', 17px, 17px, 0 0);
+      @include background-image-2x("/images/icons/book-sm", 17px, 17px, 0 0);
     }
+
     &.video {
-      @include background-image-2x('/images/icons/film-sm', 17px, 17px, 2px 0);
+      @include background-image-2x("/images/icons/film-sm", 17px, 17px, 2px 0);
     }
   }
 }
@@ -132,20 +151,25 @@ ul.related-material {
 ul.stackoverflow {
   @extend .unstyled;
   font-size: 12px;
+
   li {
     margin-bottom: 1em;
   }
+
   a {
     display: block;
     line-height: 1.2;
     font-weight: bold;
   }
+
   span {
     display: block;
     color: $light-font-color;
+
     strong {
       color: darken($light-font-color, 10%);
     }
+
     em {
       color: lighten($light-font-color, 20%);
     }
@@ -154,10 +178,11 @@ ul.stackoverflow {
 
 table.binaries {
   td {
-    padding: 8px 20px 6px 0;
     position: relative;
     width: auto;
+    padding: 8px 20px 6px 0;
   }
+
   a {
     font-weight: bold;
     border: solid 1px transparent;
