--- a/app/views/doc/ext.html.erb
+++ b/app/views/doc/ext.html.erb
@@ -83,6 +83,12 @@
             Use the powerful features of Git in your projects.
           </p>
         </li>
+       <li>
+          <h4><a href="https://www.packtpub.com/web-development/version-control-git-video">Version Control with Git [Video]</a></h4>
+          <p class='description'>
+            Your Guide to deliver great code using TFS and Git.
+          </p>
+        </li>	      
       </ul>
     </div>
   </div>
