--- a/app/views/downloads/download_windows.html.erb
+++ b/app/views/downloads/download_windows.html.erb
@@ -52,7 +52,7 @@
       <a href="/downloads/guis">
       <img src="/images/icons/nav-download-gui.png" />
       <h3>Download a GUI</h3>
-      <p>Several free and commercial GUI tools are available for the #{@platform.capitalize} platform.</p>
+      <p><%= raw "Several free and commercial GUI tools are available for the #{@platform.capitalize} platform." %></p>
       </a>
     </li>
     <li>
