progit2: add polish translation

--- a/app/views/books/_translations.html.erb
+++ b/app/views/books/_translations.html.erb
@@ -38,6 +38,7 @@ Translations started for
   <a href="/book/hi">हिन्दी</a>,
   <a href="/book/hu">Magyar</a>,
   <a href="/book/no-nb">Norwegian Bokmål</a>,
+  <a href="/book/pl">Polski</a>,
   <a href="/book/ro">Română</a>,
   <a href="/book/sr">Српски</a>,
   <a href="/book/th">ภาษาไทย</a>,
