--- a/app/views/doc/_translations.html.erb
+++ b/app/views/doc/_translations.html.erb
@@ -6,7 +6,7 @@ This book is available in
 Full translation available in
   <a href="/book/de">Deutsch</a>,
   <a href="/book/zh">简体中文</a>,
-  <a href="/book/zh-tw">正體中文</a>,
+  <a href="/book/zh-tw">繁體中文</a>,
   <a href="/book/fr/v2">Français</a>,
   <a href="/book/ja">日本語</a>,
   <a href="/book/nl">Nederlands</a>,
